# rust_tutorials

./: README.md  Rust_practice_roadmap.md  ToC.md
00_rust_tools_ecosystem/: 00-Rust_vs_C_Benchmark.md  00-usefulstuff.md  01-TypeSystem_Rust_C.md  01-cargo.md  02-rustup.md  03-mutability.md  04-prelude.md  05-ErrorHandling.md  05-rustbeforMain.md  06-panic.md  07-scope_resolution.md  08-dynamic-static-dispatch.md  09-primitive_strings.md  10-options-result.md  11-struct-mem-layout-compiler-optimization.md  12-attributes.md  13-Basic-math-ops.md  14-strings.md  15-Optinal-Null_inRust.md  16-macros.md  17-Lifetimes.md  18-PatternMatching.md  19-traits.md  20-trait_guide_for_learners.md  21-Idiomatic-Patterns.md  22-SpecialTypes.md  23-Ownership_Borrowing_MM.md  24-ImplicitBorrowingInMacros-println.md  25-AsyncRustAndBorrowChecker.md  26-static.md  27-ProgramaticTooling.md  28-Rust-vs-C-Performance-Semantics-Compiler-behavior.md  29-Integer_overflow.md  30-Inline-asm.md
2025/AdvancedFeatures/: intro.md  open.md
2025/AsyncProgramming/: Intro.md  LinuxAIO.md  RPL.md  book.md  introToRustAsyncProg.md  io_uring.md  the_async_book.md
2025/BuildingCLI/: Readme.md
2025/Collections/: readme.md
2025/Concurrency/: Intro.md  Intro1.md
2025/Crates/: important_crates.md
2025/ErrorHandling/: Readme.md
2025/ErrorHandling/error_handling/: Cargo.toml  config.txt  readme.txt
2025/ErrorHandling/error_handling/src/: main.rs
2025/FFI/: bindgen.md  build_script.md  ffi.md
2025/FunctionalProgramming/: ClosuresIterators-02.md  FunctionalProgrammingRust-01.md  FuntionalProgrammingIntro-00.md  Iterators.md  ProcessingWithIterators.md
2025/GenericTypes/: Readme.md
2025/MultithreadedWebServer/: intro.md
2025/OOP/: Intro.md  oops_rust.md
2025/PatternsMatching/: adv_pattern_matching.md  intro.md
2025/References_Lifetimes/: Readme.md
2025/SmartPointers/: Box-01.md  CPP-SmartPointers.md  Intro-00.md  Rust-SmartPointers.md  book.md
2025/Test_Automation/: Readme.md
2025/Traits/: Readme.md
2025/clap-filechecker/: Cargo.toml
2025/clap_intro/: Cargo.toml  readme.md
2025/eBPF/: BTF_unspported_targets.md  CO-RE.md  Kprobe.md  ObservabilityMonitoring.md  Roadmap.md  XDP-Rust.md  XDP.md  aya01.md  bpftool+aya-workflow.md  libbpf_BTF.md  linuxKerneleBPFExecutionModel.md  maps.md  no_std.md  perf_eBPF.md  pinning_bpffs.md  progressBar.md  understanding_crate_aya.md  urls.md
2025/eBPF/cpu_freq/cpu_freq-ebpf/: Cargo.toml
2025/eBPF/cpu_freq/cpu_freq-ebpf/src/: main.rs
2025/eBPF/hash_map/: Cargo.toml  NOTE.md  README.md
2025/eBPF/hash_map/hash_map/: Cargo.toml  build.rs
2025/eBPF/hash_map/hash_map-common/: Cargo.toml
2025/eBPF/hash_map/hash_map-common/src/: lib.rs
2025/eBPF/hash_map/hash_map-ebpf/: Cargo.toml
2025/eBPF/hash_map/hash_map-ebpf/src/: main.rs  main.rs-bak
2025/eBPF/hash_map/hash_map/src/: exclude_list.rs  main.rs
2025/eBPF/hello_xdp/hello_xdp-ebpf/: Cargo.toml
2025/eBPF/hello_xdp/hello_xdp-ebpf/src/: main.rs
2025/eBPF/my-pps-counter/my-pps-counter-ebpf/: Cargo.toml
2025/eBPF/my-pps-counter/my-pps-counter-ebpf/src/: main.rs
2025/eBPF/my_printk/: Cargo.toml  README.md
2025/eBPF/my_printk/my_printk/: Cargo.toml  build.rs
2025/eBPF/my_printk/my_printk-common/: Cargo.toml
2025/eBPF/my_printk/my_printk-ebpf/: Cargo.toml
2025/eBPF/my_printk/my_printk-ebpf/src/: main.rs
2025/eBPF/my_printk/my_printk/src/: main.rs
2025/eBPF/ping-drop/ping-drop-ebpf/: Cargo.toml
2025/eBPF/ping-drop/ping-drop-ebpf/src/: main.rs  main.rs-bak
2025/eBPF/ringbuffer_map/: Cargo.toml  README.md
2025/eBPF/ringbuffer_map/ringbuffer_map/: Cargo.toml  build.rs
2025/eBPF/ringbuffer_map/ringbuffer_map-common/: Cargo.toml
2025/eBPF/ringbuffer_map/ringbuffer_map-ebpf/: Cargo.toml
2025/eBPF/ringbuffer_map/ringbuffer_map-ebpf/src/: main.rs
2025/eBPF/ringbuffer_map/ringbuffer_map/src/: main.rs
2025/eBPF/security_monitor/: Cargo.toml  Cross_build.md  README.md
2025/eBPF/security_monitor/security_monitor/: Cargo.toml  build.rs
2025/eBPF/security_monitor/security_monitor-common/: Cargo.toml
2025/eBPF/security_monitor/security_monitor-ebpf/: Cargo.toml
2025/eBPF/security_monitor/security_monitor-ebpf/src/: main.rs
2025/eBPF/security_monitor/security_monitor/src/: main.rs
2025/eBPF/task_struct/task_struct-ebpf/: Cargo.toml
2025/eBPF/task_struct/task_struct-ebpf/src/: main.rs
2025/eBPF/tcp_est/tcp_est/: 2  Cargo.toml  build.rs
2025/eBPF/tcp_est/tcp_est/src/: main.rs  main.rs-gpt
2025/eBPF/uprobe-malloc/uprobe-malloc-ebpf/: Cargo.toml  Readme_datahandling.md
2025/eBPF/uprobe-malloc/uprobe-malloc-ebpf/src/: main.rs
2025/example-cli/: Cargo.toml
2025/hexbomb-color/: Cargo.toml  readme.md
2025/packages-crates-modules/: Readme-short.md  Readme.md
2025/print_type_of/: Cargo.toml  Readme.md
2025/trace_pipe6/: Cargo.toml  readme.md
2025/tracepoints-list/: Cargo.toml  Readme.md
2026/profiling/: Readme.md  perf_recap.md  profiling.md  samply.md
2026/xtask/: aya-xtask.md  cargo-xtask.md
Ownership_borrowing_referencing_slices_04/: Ownership.md
Ownership_borrowing_referencing_slices_04/Ownership_borrowing_referencing_slices_examples/: Cargo.toml
Ownership_borrowing_referencing_slices_04/ownership_borrowing_referencing_slices_04/: Ownership_rules.md  (+1 more)
SmartPointers/: 00-Intro.md
closures/: readme.md
enums_06/: Readme-Enums.md  enums-usecases.md
goog_comprehensive_rust/: ToC.md
guessing_game_01/: Cargo.toml  Readme.md
match_pattern_07/: Cargo.toml  match_pattern.md
modules_functions/: Cargo.toml
modules_functions_03/: Readme_Modules-basic-00.md  Readme_Modules-extra-01.md  Readme_modules-ToC.md
ownership_borrowing_referencing_slices/: Readme-Ownership-ref-borrowing-lifetimes.md
ownership_borrowing_referencing_slices_04/: Cargo.toml
structures_05/: Cargo.toml  Structures.md  Structures_gpt.md
syntax_semantics_02/: Cargo.toml  Readme-Casting.md  Readme-Conditions-04.md  Readme-DynamicDispatch.md  Readme-StaticDispatch.md  Readme-Variables-01.md  Readme-Vector-05.md  Readme-functions-02.md  Readme-primitives-03.md
(+219 files in other folders)
