[workspace]
resolver = "2"
members = [
    "hash_map",
    "hash_map-common",
    "hash_map-ebpf",
]
default-members = ["hash_map", "hash_map-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = {    version = "0.1.3", default-features = false }
aya-ebpf = {     version = "0.1.1", default-features = false }
aya-log = {      version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.0", default-features = false }

anyhow = { version = "1.0.100", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.54", default-features = false, features = ["std"] }
env_logger = { version = "0.11.8", default-features = false }
libc = { version = "0.2.179", default-features = false }
log = { version = "0.4.29", default-features = false }
#tokio = { version = "1.40.0", default-features = false }
tokio = { version = "1.49.0", features = ["full" ]}
which = { version = "6.0.0", default-features = false }

[profile.release.package.hash_map-ebpf]
debug = 2
codegen-units = 1
