[package]
name = "cpu_freq-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
cpu_freq-common = { path = "../cpu_freq-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "cpu_freq"
path = "src/main.rs"
