[package]
name = "hello_xdp-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
network-types = "0.1.0"
hello_xdp-common = { path = "../hello_xdp-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "hello_xdp"
path = "src/main.rs"
