[package]
name = "ping-drop-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya"}
aya-log-ebpf = { git = "https://github.com/aya-rs/aya"}
ping-drop-common = { path = "../ping-drop-common" }
network-types = "0.1.0"


[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[[bin]]
name = "ping-drop"
path = "src/main.rs"
