[package]
name = "ringbuffer_map-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
ringbuffer_map-common = { path = "../ringbuffer_map-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ringbuffer_map"
path = "src/main.rs"
