[package]
name = "task_struct-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
task_struct-common = { path = "../task_struct-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "task_struct"
path = "src/main.rs"
