[package]
name = "tcp_est"
version = "0.1.0"
edition.workspace = true
publish = false 

[dependencies]
tcp_est-common = { path = "../tcp_est-common", features = ["user"] }

anyhow = "1.0.100"
aya = "0.13.1"
aya-log = "0.2.1"
env_logger = "0.11.8"
libc = "0.2.178"
log = "0.4.29"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
# tokio = {version = "1.48.0", features = ["full"]}
clap = { version = "4.5.53", features = ["derive"] }
[build-dependencies]
anyhow = "1.0.100"
aya-build = "0.1.3"
cargo_metadata = "0.23.1"
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
tcp_est-ebpf = { path = "../tcp_est-ebpf" }

[[bin]]
name = "tcp_est"
path = "src/main.rs"
