[package]
name = "uprobe-malloc-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
uprobe-malloc-common = { path = "../uprobe-malloc-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "uprobe-malloc"
path = "src/main.rs"
